public/css/stylesheet.css
/* ... */
.hovered_nav_item{
    color: white;
}
.burger{
    display: none;
    flex-direction: column;
    cursor: pointer;
}
.burger div{
    width: 25px;
    height: 3px;
    margin: 3px;
    background-color: #f4ebc1;
}
.mobile_nav{
    position: fixed;
    width: 100%;
    height: 95vh;
    bottom: 0vh;
    right: 0px;
    background-color: #40a8c4;
    z-index: 2;
    display: flex;
    flex-direction: column;
    transform: translateX(100%);
    transition: 1s all ease-in-out;
}
.mobile_links_container{
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}
.mobile_nav_links{
    color: #f4ebc1;
    transition: all 0.3s ease;
    font-family: sans-serif;
    font-size: 1.2em;
}
.nav_active{
    transform: translateX(0%)
}

/*Landing Page CSS*/
.image_panel{
    width: 100%;
    overflow: hidden;
    height: 650px;
    position: relative;
}

.text_panel{
    width: 100%;
    height: 450px;
    overflow: hidden;
}


/*News*/
.news_panel{
    background-color: #66d1aa;
}
.news_container{
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
}
.news_header_div{
    margin: 0;
    padding: 0;
}
.news_header{
    margin: 0;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 34px;
    text-transform: uppercase;
    color: white;
}
.social_link_div{
    margin: 0;
    width: 50%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}
.linkedin_icon{
    width: 46px;
    height: 46px;
    background-image: url("/images/linkedin_icon.png");
    background-size: cover;
}
.news_button_div{
    margin: 0px;
}
.news_button{
    background: none;
    color: #f4ebc1;
    border: solid;
    border-color: white;
    font-size: 24px;
    width: 350px;
    height: 75px;
    transition: all 0.5s ease;
    cursor: pointer;
}


/*What New CSS*/
.news_elements{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    height: 100%;
}
.social_header_div{
    margin-left: auto;
    margin-right: auto;
    opacity: 0;
    transition: all 1.5s ease;
}
.social_grid_container{
    display: grid;
    grid-template-columns: auto auto auto;
}
.social_grid_element{
    display: flex;
    align-items: center;
    opacity: 0;
    transition: all 1.5s ease;
    pointer-events: none;
}
.social_items_div{
    margin-left: 25%;
    display: flex;
    align-items: center;
}
.social_node{
    width: 75px;
    height: 75px;
    opacity: 1;
    margin: 10px;
    -webkit-filter: drop-shadow(10px 10px 10px black);
    filter: drop-shadow(10px 10px 10px black);
    transition: all 1.5s ease;
}
.social_text{
    font-size: 25px;
    font-family: Arial, Helvetica, sans-serif;
    margin: 10px;
    text-align: center;
}
.social_image_link{
    max-width: 75px;
    max-height: 75px;
    border-radius: 5px;
}
.wn_button_div{
    width: 80%;
    margin-left: 10%;
    margin-right: 10%;
}
.photo_credit_span{
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 15px;
    width: 100%;
}

/*About CSS*/
.about_container_div{
    margin: 0;
}
.about_info_div{
    margin: 0 20px 0 auto;
    color: white;
    width: 50%;
}
.about_header{
    margin: 0 0 5px 10px;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 20px;
}
.about_text_div{
    box-sizing: border-box;
    border: solid 1px white;
    border-radius: 10px;
    padding: 2%;
    width: 100%;
}
.about_text{
    font-family: Arial, Helvetica, sans-serif;
    font-size: 18px;
}
.about_image_div{
    height: 90%;
    position: absolute;
    left: 0px;
    bottom: 0px;
    overflow: hidden;
}
.about_image{
    height: 100%;
}
/*.about_image_div{
    position: absolute;
    height: 75%;
    left: 3%;
    bottom: 0px;
}
.about_image{
    height: 100%;
    -webkit-filter: drop-shadow(10px 10px 10px #222222);
    filter: drop-shadow(10px 10px 10px #222222);
}
.about_info_div{
    right: 0px;
    width: 50%;
    margin: 0 3% 0 0;
}
.about_text_div{
    position: relative;
    display: flex;
    flex-direction: row-reverse;
    align-items: right;
    border: solid 1px white;
    border-radius: 10px;
    width: 100%;
    color: white;
}
.about_header{
    right: 0px;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 22px;
    margin: 0 0 1% 1%;
    color: white;
}
.about_text{
    position: relative;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 18px;
    margin: 3%;
    z-index: 2;
}*/
.panel3_div{
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 550px;
    overflow: hidden;
    background-color: #53b592/*#66d1aa*/;
    -webkit-filter: drop-shadow(10px 10px 10px #222222);
    filter: drop-shadow(10px 10px 10px #222222);
}


/*Projects CSS*/
.project_panel{
    height: 1000px;
}
.p4_grid_container{
    display: grid;
    grid-template-areas: 
        'project1 project1 project2 project2 project2 project2'
        'project1 project1 project2 project2 project2 project2'
        'project1 project1 project3 project3 project3 project4'
        'project5 project6 project6 project6 project6 project4'
        'project5 project6 project6 project6 project6 project4';
    height: 1000px;
    width: 100%;
    gap: 20px;
    -webkit-filter: drop-shadow(10px 10px 10px #222222);
    filter: drop-shadow(10px 10px 10px #222222);
}
.p4_grid_element1{
    grid-area: project1;
    background-image: url(/images/site_image.png);
    background-position:  center;
    background-size: cover;
    margin-top: 20px;
    margin-left: 20px;
    cursor: pointer;
}
.hidden_overlay_1{
    background-color: white;
    height: 0px;
    width: 100%;
    position: absolute;
    opacity: 0;
    transition: 1s all ease;
}
/* ... */

